RESOLVED FIXED226399
background-attachment:fixed inside position:fixed shouldn't cause slow scrolling
https://bugs.webkit.org/show_bug.cgi?id=226399
Summary background-attachment:fixed inside position:fixed shouldn't cause slow scrolling
Cameron McCormack (:heycam)
Reported 2021-05-28 15:09:12 PDT
Background images that are background-attachment:fixed don't need to cause slow scrolling when inside position:fixed elements, since they won't move.
Attachments
Squashed patch with dependencies for EWS (49.28 KB, patch)
2021-05-30 22:36 PDT, Cameron McCormack (:heycam)
no flags
Squashed patch with dependencies for EWS (52.32 KB, patch)
2021-05-31 23:08 PDT, Cameron McCormack (:heycam)
no flags
Patch (50.02 KB, patch)
2021-06-01 15:21 PDT, Cameron McCormack (:heycam)
ews-feeder: commit-queue-
Patch (54.30 KB, patch)
2021-06-01 17:30 PDT, Cameron McCormack (:heycam)
no flags
Patch (54.30 KB, patch)
2021-06-02 19:56 PDT, Cameron McCormack (:heycam)
no flags
Cameron McCormack (:heycam)
Comment 1 2021-05-28 15:09:47 PDT
Cameron McCormack (:heycam)
Comment 2 2021-05-30 22:36:54 PDT
Created attachment 430175 [details] Squashed patch with dependencies for EWS
Cameron McCormack (:heycam)
Comment 3 2021-05-31 23:08:47 PDT
Created attachment 430232 [details] Squashed patch with dependencies for EWS
Cameron McCormack (:heycam)
Comment 4 2021-06-01 15:21:03 PDT
Cameron McCormack (:heycam)
Comment 5 2021-06-01 16:05:10 PDT
Comment on attachment 430297 [details] Patch Let's fix up this build bustage from dropping the bug 226453 patch.
Cameron McCormack (:heycam)
Comment 6 2021-06-01 17:30:58 PDT
Simon Fraser (smfr)
Comment 7 2021-06-01 21:01:13 PDT
Comment on attachment 430309 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430309&action=review Seems OK, but it's worrisome that some layout tests that don't have fixed backgrounds have different repaint behavior. > Source/WebCore/rendering/RenderLayerCompositor.cpp:4920 > + // scrolling tree propagates DescendantScrollersHaveSynchronousScrolling bits up the > + // tree, but shouldUpdateScrollLayerPositionSynchronously looks at the scrolling state > + // tree instead.) Yeah that sucks.
Cameron McCormack (:heycam)
Comment 8 2021-06-01 22:43:36 PDT
(In reply to Simon Fraser (smfr) from comment #7) > Seems OK, but it's worrisome that some layout tests that don't have fixed > backgrounds have different repaint behavior. I'll investigate that before landing.
Cameron McCormack (:heycam)
Comment 9 2021-06-02 18:52:13 PDT
> bool hasSynchronousScrollingReasons(ScrollingNodeID nodeID) const { return !synchronousScrollingReasons(nodeID); } It was a missing ! here. 😐
Cameron McCormack (:heycam)
Comment 10 2021-06-02 19:56:01 PDT
EWS
Comment 11 2021-06-03 14:26:35 PDT
Committed r278419 (238443@main): <https://commits.webkit.org/238443@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430438 [details].
Note You need to log in before you can comment on or make changes to this bug.